--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-uvicorn==0.18.3
-fastapi==0.82.0
-numpy==1.23.2
-pandas==1.4.4
-sqlalchemy==1.4.41
-pydantic==1.10.2
-mysql.connector==2.2.9
-sklearn==0.0
+uvicorn
+fastapi
+numpy
+pandas
+sqlalchemy
+pydantic
+sklearn
 python-multipart
 mysql-connector-python
